--- a/recuperer_compte.html
+++ b/recuperer_compte.html
@@ -53,7 +53,7 @@
         localStorage.setItem('tentative', newArr.tentative)
         localStorage.setItem('bonne_reponse', newArr.bonne_reponse)
         localStorage.setItem('pieces', newArr.pieces)
-        //location = "debut_jeu.html"
+        location = "debut_jeu.html"
 
     }
 
