correction interface tuto

--- a/tuto_debut3.html
+++ b/tuto_debut3.html
@@ -39,7 +39,7 @@
     <script src="charger.js"></script>
 
 <img src="image/fondfinal.png" alt="fond_boulangerie"style=" position: absolute; width: 100%;height: 100%">
-<img id="fleche_pointeur" alt="fleche_pointeur" src="image/fleche_pointeur.svg" style="transform: scaleY(-1); width: 20%; position:absolute; right: 30%; top: 15%; display: none; z-index: 1">
+<img id="fleche_pointeur" alt="fleche_pointeur" src="image/fleche_pointeur.svg" style="transform: scaleY(-1); width: 18%; position:absolute; right: 30%; top: 15%; display: none; z-index: 1">
 
     <img id="fenetre" alt="fenetre"src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
     <img id="fenetre_droite"alt="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
@@ -79,11 +79,9 @@ top:5px"></span>
 <div id="zone3" style="z-index:0;position: absolute; top: 0em; width: 700px; height: 350px;  "> </div>
 <img src="./image/caisse.png" alt="caisse" style="position:absolute; width: 13%; top: 70%; left: 15%; transform: scaleX(-1)">
 <div id="bulle_chat" style="position: absolute;
-    right:10%;
-    top: 10%;
+    bottom: 40%;
     background-color:white;
     text-align:center;
-    max-width: 30%;
     padding: 2%;
     border:2px solid #555555;
 border-top-right-radius:80px 40px;
@@ -126,11 +124,11 @@ color: blueviolet"></span>
     </div>
 <img id="porte0" title="SORTIR" alt="porte"src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%; z-index: 0">
 <div id="calculette" style="display:none;position:absolute;
-left: 50%;top: 60%;background-color: orangered; width: 37%; height: 10% bottom: 10em; border-radius: 40px">
+left: 50%;top: 50%;background-color: orangered; width: 37%; height: 10% bottom: 10em; border-radius: 40px">
     <span id="calcul" style=" width: 30%; text-align:left;display:none; margin: auto; margin-top: 0.5em; font-family: ComicFighter, Georgia; font-weight:bold;font-size:2em; "></span>
     <input type="text" id="resultat" autocomplete="off" placeholder="Ecris le résultat ici" style="width:90%;display: block; margin : auto;margin-top: 0.5em; margin-bottom: 0.5em;font-size: 1.5em; ">
-    <input type="button" id="aide" style="float:right; margin-top: 0.2em;margin-bottom:0.5em; margin-right:1em;padding:0.5em;font-size: 1.5em; border-radius: 30px; background-color: coral; text-decoration: none; color: #333333; width: 8em;" value="Aide">
-    <input type="button" id="verif" style="float:right; margin-top: 0.2em;margin-bottom:0.5em; margin-right:1em;padding:0.5em;font-size: 1.5em; border-radius: 30px; background-color: coral; text-decoration: none; color: #333333; width: 8em;" value="Vérifier">
+    <input type="button" id="aide" style="float:right; margin-top: 0.2em;margin-bottom:0.5em; margin-right:1em;padding:0.5em;font-size: 1.5em; border-radius: 30px; background-color: coral; text-decoration: none; color: #333333; width: 40%;" value="Aide">
+    <input type="button" id="verif" style="float:right; margin-top: 0.2em;margin-bottom:0.5em; margin-right:1em;padding:0.5em;font-size: 1.5em; border-radius: 30px; background-color: coral; text-decoration: none; color: #333333; width: 40%;" value="Vérifier">
 </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -144,8 +142,9 @@ left: 50%;top: 60%;background-color: orangered; width: 37%; height: 10% bottom: 
         document.getElementById("output").innerHTML = "Bonjour, j'aimerais <br/>2 croissants (2€)<br> et 1 brioche (4€) <br /> s'il-vous-plaît. <br/> Combien je vous dois?"
         document.getElementById("fleche").addEventListener("click", function(){
             document.getElementById("bulle_chat").style.display = "block"
-            document.getElementById("bulle_chat").style.top = "10%"
+            document.getElementById("bulle_chat").style.bottom = "55%"
             document.getElementById("bulle_chat").style.right = "10%"
+            document.getElementById("bulle_chat").style.maxWidth = "30%"
             document.getElementById("output_chat").innerHTML = "quel calcul devons-nous faire... <br/>Une fois que tu as trouvé le résultat, <br>écris le ici et clique sur le bouton valider"
             document.getElementById("calculette").style.display = "block"
             document.getElementById("calculette").style.right = "5%"
@@ -165,6 +164,7 @@ left: 50%;top: 60%;background-color: orangered; width: 37%; height: 10% bottom: 
     document.getElementById("verif").addEventListener("click", function(){
        verifier()
     }, false);
+
 function verifier(){
     console.log(document.getElementById("resultat").value);
     if (document.getElementById("resultat").value == 8){
@@ -172,11 +172,11 @@ function verifier(){
         document.getElementById("output").innerHTML = "";
         document.getElementById("bulle_chien").style.visibility = "hidden";
         document.getElementById("chien").style.opacity = 0;
-        document.getElementById("bulle_chat").style.top = "25%";
-        document.getElementById("bulle_chat").style.right = "80%";
+        document.getElementById("bulle_chat").style.bottom = "50%";
+        document.getElementById("bulle_chat").style.right = "auto";
 
         document.getElementById("output_chat").innerHTML = "";
-        document.getElementById("output_chat").innerHTML = "C'est la bonne réponse, Bravo "+localStorage.getItem("prenom")+"! Cela vous coûtera 8€ s'il-vous-plaît, Monsieur";
+        document.getElementById("output_chat").innerHTML = "C'est la bonne réponse, "+'<br />'+"Bravo "+localStorage.getItem("prenom")+"! "+'<br />'+"Cela vous coûtera 8€ "+'<br />'+"s'il-vous-plaît, Monsieur";
 
         document.getElementById("fleche").style.opacity = 1;
         document.getElementById("calculette").style.visibility = "hidden";
@@ -186,10 +186,13 @@ function verifier(){
             document.getElementById("div_pieces").style.opacity = 1;
             document.getElementById("pieces").innerHTML = "1";
             document.getElementById("output_chat").innerHTML = "";
+            document.getElementById("bulle_chat").style.right = "auto";
+
             document.getElementById("output_chat").innerHTML = "Regarde "+localStorage.getItem("prenom")+", nous avons gagné une pièce!";
             localStorage.setItem("pieces", "1");
             document.getElementById("fleche").addEventListener("click", function(){
                 document.getElementById("output_chat").innerHTML = "";
+                document.getElementById("bulle_chat").style.bottom = "auto";
                 document.getElementById("output_chat").innerHTML = "Les pièces permettent d'acheter de nouveaux meubles en magasin, faisons y un tour! Clique sur la porte";
                 document.getElementById("bulle_chat").style.top = "15%"
                 document.getElementById("fleche_pointeur").style.transform = "rotate(100deg)";
@@ -217,20 +220,17 @@ function verifier(){
 
 }
         document.getElementById("aide").addEventListener("click", function(){
-
             document.getElementById("calculette").style.zIndex=1;
-
-        let clic_aide = document.getElementById("calcul");
-        clic_aide.innerHTML = "2 × 2 <br> + <br> 1 × 4"
-        if(getComputedStyle(clic_aide).display != "none"){
-
-            document.getElementById("calculette").style.zIndex=0;
-            clic_aide.style.display = "none";
-        } else {
-            clic_aide.style.display = "block";
-            cliquer_pour_etre_aide = true;
-        }}
-        ,false);
+            let clic_aide = document.getElementById("calcul");
+            clic_aide.innerHTML = "2 × 2 <br> + <br> 1 × 4"
+            if(getComputedStyle(clic_aide).display != "none"){
+                document.getElementById("calculette").style.zIndex=0;
+                clic_aide.style.display = "none";
+            } else {
+                clic_aide.style.display = "block";
+                cliquer_pour_etre_aide = true;
+            }
+        },false);
 
     function deplace () {
         for (var i = 0; i < nbFormules; i++) {
@@ -299,7 +299,7 @@ function verifier(){
 
             document.write ('<span id="f'+i+'" style="position: absolute; left: '+flocons[i]["left"]+'px; top: '+flocons[i]["top"]+'px; color: white">');
             // placer ici l'objet qui tombe !
-            document.write ('<img src="image/chien.PNG" style="width: 40%">');
+            document.write ('<img src="image/chien.PNG" style="width: 100%">');
             document.write ('</span>');
         }
 
