--- a/tuto_caisse_fin.html
+++ b/tuto_caisse_fin.html
@@ -45,12 +45,6 @@
     <img alt="fenetre" id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
     <img alt="fenetre_droite" id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
     <img alt="table_salon" id="table_salon" src="image/magasin/table_salon.png" style="display: none; position: absolute;    width: 16%; top: 45%; right: 33%">
-    <img alt="etoile" id="etoile" src="" style="width: 10em; position: absolute; top: 5em; left: 5em;">
-    <img alt="fleur" id="fleur" src="" style="width: 10em; position: absolute; top: 5em; left: 15em;">
-    <img alt="cercle" id="cercle" src="" style="width: 10em; position: absolute; top: 5em; left: 25em;">
-    <img alt="mandala" id="mandala" src="" style="width: 10em; position: absolute; top: 5em; left: 35em;">
-    <img alt="rosace" id="rosace" src="" style="width: 10em; position: absolute; top: 5em; left: 45em;">
-    <img alt="spirale" id="spirale" src=""     style="width: 10em; position: absolute; top: 5em; left: 55em;">
     <img alt="tapis" id="tapis" hidden src="image/magasin/tapis.png" style="position: absolute ;width: 15%; left: 27%; top: 47%">
     <img alt="presentoire" id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ;width: 15%;  top: 50%; transform: scaleX(-1)">
 </div>
@@ -178,7 +172,7 @@ position: absolute; width: 12%; left: 10%; top: 72%;">
     document.getElementById("fleche").addEventListener("click", function() {
         document.getElementById("output").innerHTML = "Le tutoriel est maintenant fini, amuses toi bien!"
         document.getElementById("fleche").addEventListener("click", function() {
-            location="caisse.html"
+            location="debut_jeu.html"
         })
 
     })
