--- a/supprimer_joueur_import.html
+++ b/supprimer_joueur_import.html
@@ -17,7 +17,7 @@
         }
         #txt {
 
-            font-size: 2em; font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered;
+            font-size: 1.5em; font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered;
             background-color: rgba(50, 50, 50, 0.5);
             display: inline-block;
         }
@@ -29,7 +29,7 @@
         }
 
         input {
-            width : 10em;
+            width : 40%;
             font-size: 1em;
             margin: 0.5em;
             margin-top: 0.2em;
