--- a/demande_tuto_ou_non.html
+++ b/demande_tuto_ou_non.html
@@ -41,7 +41,7 @@
 <div id="tuto">
     <span>Veux tu voir le tutoriel? <br></span>
     <input type="button" value="oui" onclick="location='tuto_debut.html'">
-    <input type="button" value="non" onclick="location='caisse.html'">
+    <input type="button" value="non" onclick="location='debut_jeu.html'">
 </div></section>
 </body>
 </html>
