--- a/demandeEnregistrement_creer.html
+++ b/demandeEnregistrement_creer.html
@@ -8,16 +8,15 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta http-equiv="Cache-control" content="public" max-age="31536000">
     <link rel="stylesheet" href="chargement_elements.css">
-
     <style>
         body {
             background-image: url("./image/fond_boulangerie.png");
-            font-size: 2em;
+            font-size: 3em;
             text-align: center;
         }
         #txt {
 
-            font-size: 2em; font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered;
+            font-size: 1.5em; font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered;
             background-color: rgba(50, 50, 50, 0.5);
             display: inline-block;
         }
@@ -29,10 +28,10 @@
         }
 
         input {
-            width : 10em;
+            width : 40%;
             font-size: 1em;
             margin: 0.5em;
-            margin-top: 2%;
+            margin-top: 0.2em;
             padding: 0.5em 1em 0.5em 1em;
             border-radius: 30px; background-color: orangered;
             color: #333333
@@ -51,63 +50,53 @@
 </div>
 <section>
     <script src="charger.js"></script>
-
     <div id="txt">
-    Ton ancienne partie va être supprimée. <br>
-    Veux-tu la télécharger?<br>
-</div><br><div id="btn">
-    <input type="button" value="OUI" id="oui"><br>
-    <input type="button" value="NON" id="non"><br>
+        Ton ancienne partie va être supprimé. <br>
+        Veux-tu la télécharger?<br>
+    </div><div id="btn">
+    <input type="button" value="OUI" id="oui">
+    <input type="button" value="NON" id="non">
     <input type="button" value="ANNULER" id="annuler">
 </div>
-<script>
-    document.getElementById("annuler").addEventListener("click", function(){
-        window.history.back();
-    }, false);
+    <script>
+        document.getElementById("annuler").addEventListener("click", function(){
+            window.history.back()
+        }, false);
 
-    document.getElementById("non").addEventListener("click", function(){
-        localStorage.clear();
-        location = "creerPartie.html";
-    }, false);
+        document.getElementById("non").addEventListener("click", function(){
+            localStorage.clear();
+            location = "creerPartie.html";
+        }, false);
 
-    document.getElementById("oui").addEventListener("click", function(){
+        document.getElementById("oui").addEventListener("click", function(){
 
-        var text = '{\n' +
-            '  "prenom": "' + localStorage.getItem("prenom") +'",\n' +
-            '  "niveau": "' + localStorage.getItem("niveau") +'",\n' +
-            '  "tentative": "' + localStorage.getItem("tentative") +'",\n' +
-            '  "bonne_reponse": "' + localStorage.getItem("bonne_reponse") +'"\n' +
-            '  "pieces": "' + localStorage.getItem("pieces") +'"\n' +
-            '  "liste_biens": "' + localStorage.getItem("liste_biens") +'"\n' +
-            '}';
-        var filename = "config_joueur.json";
+            var text = '{\n' +
+                '  "prenom": "' + localStorage.getItem("prenom") +'",\n' +
+                '  "niveau": "' + localStorage.getItem("niveau") +'",\n' +
+                '  "tentative": "' + localStorage.getItem("tentative") +'",\n' +
+                '  "bonne_reponse": "' + localStorage.getItem("bonne_reponse") +'",\n' +
+                '  "pieces": "' + localStorage.getItem("pieces") +'",\n' +
+                '  "liste_biens": "' + localStorage.getItem("liste_biens") +'"\n' +
+                '}';
+            var filename = "config_joueur.json";
 
-        download(filename, text);
+            download(filename, text);
 
-        location = "creerPartie.html";
+            location = "creerPartie.html";
 
-    }, false);
+        }, false);
 
-    function download(filename, text) {
-        var element = document.createElement('a');
-        element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
-        element.setAttribute('download', filename);
+        function download(filename, text) {
+            var element = document.createElement('a');
+            element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
+            element.setAttribute('download', filename);
 
-        element.style.display = 'none';
-        document.body.appendChild(element);
+            element.style.display = 'none';
+            document.body.appendChild(element);
 
-        element.click();
-        document.body.removeChild(element);
-    }
-</script>
-</section>
+            element.click();
+            document.body.removeChild(element);
+        }
+    </script></section>
 </body>
-<style>
-    .bulle {
-        display:none;
-    }
-    .survol:hover .bulle {
-        display: block;
-    }
-</style>
 </html>
