--- a/init2.html
+++ b/init2.html
@@ -39,6 +39,7 @@
     <a href="telechargement_json_config_joueur.html" style="display: block; width : 20em; margin : auto;margin-bottom: 2%;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 1.5em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" >ENREGISTRER MA PARTIE</a>
     <a href="demandeEnregistrement_creer.html" style="display: block; width : 20em; margin : auto;margin-bottom: 2%;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 1.5em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" >NOUVELLE PARTIE</a>
     <a href="supprimer_joueur_import.html" style="display: block; width : 20em; margin : auto;margin-bottom: 2%;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 1.5em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" >IMPORTER UNE PARTIE</a>
+    <a href="supprimer_joueur.html" style="display: block; width : 20em; margin : auto;margin-bottom: 2%;text-align: center; padding:1em 0.5em 1em 0.5em; font-size: 1.5em; border-radius: 30px; background-color: orangered; text-decoration: none; color: #333333" >SUPPRIMER MA PARTIE</a>
 
 </div>
 <div class="survol">
