--- a/documentation.html
+++ b/documentation.html
@@ -89,7 +89,7 @@
 </div>
 <h1>Comment jouer</h1>
 <div>
-    <img style="width: 7%" src="image/chien.png" alt="chien" title="CLIENT">
+    <img style="width: 7%" src="image/chien.PNG" alt="chien" title="CLIENT">
 <p>Dans la boulangerie, on reçoit des clients qui nous demandent une liste de produit et on doit calculer combien ils nous doivent.
 On a trois tentatives pour trouver la bonne réponse. <br>Si on la trouve, on gagne une pièce. On peut ensuite dépenser dans le magasin de décoration  les pièces cumulées et acheter un bouquet de fleur, un canapé...
 </p><img title="ARTICLE DU MAGASIN" alt="ARTICLE DU MAGASIN" style="width: 10%" src="image/magasin/lavande.png"><img title="ARTICLE DU MAGASIN" alt="ARTICLE DU MAGASIN" style="width: 10%"src="image/magasin/table_salon.png"><img title="ARTICLE DU MAGASIN" alt="ARTICLE DU MAGASIN" style="width: 10%"src="image/magasin/canape.png"></div>
