--- a/credits.html
+++ b/credits.html
@@ -87,7 +87,7 @@ M. NICOLAS POUCELOT</p>
             <td>Clipart Library</td>
             <td><a href="http://clipart-library.com/cartoon-pictures-of-dog-bones.html">Lien de Clipart Library</a></td>
             <td><a href="https://fr.m.wikipedia.org/wiki/Fichier:Le_Val_Saint-Germain_(Essonne)_centre_ville_1096.jpg">Licence</a></td>
-            <td><a href="http://clipart-library.com/clipart/gTeEqgKTd.htm"><img src="image/chien.png" alt="chien"></a></td>
+            <td><a href="http://clipart-library.com/clipart/gTeEqgKTd.htm"><img src="image/chien.PNG" alt="chien"></a></td>
 
         </tr>
         <tr>
