--- a/documentation.html
+++ b/documentation.html
@@ -38,6 +38,8 @@
             color: black;
             font-weight: bold ;
         }
+
+
     </style>
 </head>
 <body>
@@ -61,7 +63,15 @@
 </i></div>
 
 <h2>Démarrage du jeu</h2>
-<div><p>Le lien suivant mène au jeu My Bakery :  <a href="index.html">Jeu en ligne</a></p></div>
+<div><p>Le lien suivant mène au jeu My Bakery : <br> <button id="btn"style="padding:6px 0 6px 0;
+	font:bold 13px Arial;
+	background-color:lightsalmon;
+	color:#555;
+	border-radius:2px;
+	width:100px;
+	border:1px solid lightsalmon;
+	box-shadow:1px 1px 3px #999;
+" onclick="location='https://edelhomelle.github.io/My_Bakery'">Jeu en ligne</button></p></div>
 
 <h2>Création d'une partie</h2>
 <div><p>Le joueur doit seulement entrer son prénom ou un pseudo pour commencer à jouer! </p></div>
