--- a/documentation.html
+++ b/documentation.html
@@ -63,7 +63,7 @@
 </i></div>
 
 <h2>Démarrage du jeu</h2>
-<div><p>Le lien suivant mène au jeu My Bakery : <br> <button id="btn"style="padding:6px 0 6px 0;
+<div><p>Le bouton suivant mène au jeu My Bakery : <br> <button id="btn"style="padding:6px 0 6px 0;
 	font:bold 13px Arial;
 	background-color:lightsalmon;
 	color:#555;
