--- a/caisse.html
+++ b/caisse.html
@@ -59,7 +59,7 @@ margin: 0;
 </p>
 
 <section>
-    <script src="charger.js"></script>
+    <script type="text/javascript" src="charger.js"></script>
 
     <img src="image/fondfinal.png" alt="fond_boulangerie" style=" position: absolute; top: 0; width:100%;height: 100%;">
     <div class="dropdown" style="top:2px; left:2px;position: absolute">
@@ -71,7 +71,7 @@ margin: 0;
             <a href="demandeEnregistrement_importer.html" id="seco" >Importer une partie</a>
         </div>
     </div>
-    <script>
+    <script type="text/javascript">
         var cliquer_pour_etre_aide = false;
     </script>
     <div id="deco">
@@ -153,8 +153,8 @@ color: blueviolet;
         <input type="image" alt="sous" src="image/sous.png" style="width: 10em; ">
 
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script type="text/javascript">
         /* $.getJSON('evolution', function(data){
          console.log(data);
      });
@@ -784,7 +784,7 @@ color: blueviolet;
     </script>
 
   <!--  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>-->
-    <script>
+    <script type="text/javascript">
 
 
 
@@ -826,7 +826,7 @@ color: blueviolet;
             }}
     </script>
 
-    <script>
+    <script type="text/javascript">
         // DECO
         if (localStorage.getItem("liste_biens") == null){
 
@@ -848,8 +848,8 @@ color: blueviolet;
 
     </script>
 
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.2.0/dist/confetti.browser.min.js"></script>
-    <script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.2.0/dist/confetti.browser.min.js"></script>
+    <script type="text/javascript">
         //https://www.npmjs.com/package/canvas-confetti
         // https://www.kirilv.com/canvas-confetti/
 
@@ -879,7 +879,7 @@ color: blueviolet;
                 }
             }());}
     </script>
-    <script>
+    <script type="text/javascript">
         function miseEnAttente()
         {
             //Traitement
@@ -912,8 +912,8 @@ color: blueviolet;
     </h1>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script type="text/javascript">
         //https://tobiasahlin.com/moving-letters/#9
         function bravo(){
 
@@ -942,7 +942,7 @@ color: blueviolet;
 
 
 </section>
-<script>window.addEventListener('load', () =>  {
+<script type="text/javascript">window.addEventListener('load', () =>  {
 
     const preload = document.querySelector(".preload")
     preload.classList.add("preload-finish")
